# FastAPI-app

./: .env  main.py  pyproject.toml
app/: app.py
